Fix: fixing alignment of footer elements

--- a/public/style.css
+++ b/public/style.css
@@ -17,15 +17,10 @@ nav a {
   margin: 1em;
 }
 
-.nav {
-  display: grid;
-  /* grid-template-columns: repeat(auto-fill, minmax(50px, 1fr)); */
-  grid-gap: 1rem;
-  grid-template-columns: 2fr 9fr 1fr 1fr 1fr 1fr;
-  background-color: black;
-  color: white;
-  text-align: center;
-  height: 100px;
+footer a {
+  display: inline-block;
+  margin: 4rem;
+  align-items: center;
 }
 
 form div {
